# event-driven-quant-agent-lab

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  upstreams-manifest.json
docs/: additional-research.zh.md  advisory-core-spec.zh.md  architecture.md  implementation-path.zh.md  mcp-policy.zh.md  phase1-status.zh.md  requirements-alignment.zh.md  roadmap.zh.md  stage-01-review-checklist.zh.md  stage-02-review-checklist.zh.md  stage-03-review-checklist.zh.md  stage-04-review-checklist.zh.md  stage-05-review-checklist.zh.md  stage-06-review-checklist.zh.md  stage-07-review-checklist.zh.md  stage-08-review-checklist.zh.md  stage-09-review-checklist.zh.md  stage-10-review-checklist.zh.md  ten-stage-roadmap.zh.md
docs/reviews/: overall-review-fixes.zh.md  phase-01-review.zh.md  phase-02-review.zh.md  phase-03-review.zh.md  phase-04-review.zh.md  phase-05-review.zh.md  phase-06-review.zh.md  phase-07-review.zh.md  phase-08-review.zh.md  phase-09-review.zh.md  phase-10-review.zh.md
scripts/: stage_01_gate.py  stage_02_gate.py  stage_03_gate.py  stage_04_gate.py  stage_05_gate.py  stage_06_gate.py  stage_07_gate.py  stage_08_gate.py  stage_09_gate.py  stage_10_gate.py
tests/: test_a2a_phase9.py  test_audit.py  test_connectors.py  test_csv_loader.py  test_decision_phase6.py  test_gates.py  test_importers.py  test_metadata.py  test_model_boundary_phase7.py  test_pipeline.py  test_research_evaluation.py  test_schemas.py  test_single_model_phase8.py  test_strategy_tournament_phase10.py  test_text_cleaning.py
(+49 files in other folders)
