[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-agent-lab"
version = "0.1.0"
description = "Minimal event-driven quant advisory runtime."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.10,<3",
]

[project.scripts]
quant-agent-lab = "quant_agent_lab.app.cli:main"

[tool.setuptools.packages.find]
include = ["quant_agent_lab*"]

[tool.ruff]
line-length = 100
target-version = "py310"
